test/files/semantic/reject/var_redef_class.neo
class A
    let x: int = 10
    let x: float = 2.0
end